Modify bg: fixed bg on mobile view

--- a/src/App.css
+++ b/src/App.css
@@ -61,15 +61,22 @@ h1 {
   }
 }
 
-.App {
-  text-align: center;
-  align-items: center;
-  align-content: center;
+.bg {
+  width: 100%;
+  height: 100%;
   background: url('./bg.jpg') no-repeat center center fixed;
+  position: fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  z-index: -1;
+}
+
+.App {
+  text-align: center;
+  align-items: center;
+  align-content: center;
 }
 
 .main {
@@ -160,7 +167,7 @@ h1 {
 }
 
 .loader {
-  margin-bottom: 1.3rem;
+  margin-bottom: 1.5rem;
   width: 100vw;
 }
 
